--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "inventoryapp",
   "version": "1.2.0",
+  "source": "public/index.html",
   "scripts": {
     "test": "jest",
     "client-dev": "parcel public/index.html --open",
     "server-dev": "nodemon server.js",
     "seed": "node server/seed.js",
-    "start": "parcel build public/index.html && npm run seed && node server.js"
+    "build": "parcel build public/index.html",
+    "start": "parcel  public/index.html && node server.js"
   },
   "dependencies": {
     "@babel/preset-env": "^7.15.0",
